--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -498,7 +498,7 @@ components:
              LostResponseLogEvent, CallSignalingMessageLogEvent, SipRecMetadataLogEvent, NonRtpMediaMessageLogEvent, AliLocationQueryLogEvent, AliLocationResponseLogEvent, MalformedMessageLogEvent, IncidentSplitLogEvent,
              DiscrepancyReportLogEvent, ElementStateChangeLogEvent, ServiceStateChangeLogEvent, AdditionalDataQueryLogEvent, AdditionalDataResponseLogEvent, LocationQueryLogEvent, LocationResponseLogEvent, CallStateChangeLogEvent,
              GatewayCallLogEvent, HookflashLogEvent, LegacyDigitsLogEvent, AgentStateChangeLogEvent, QueueStateChangeLogEvent, KeepAliveFailureLogEvent, RouteRuleMsgLogEvent, PolicyChangeLogEvent,
-             VersionsLogEvent, SubscribeLogEvent, EidoLogEvent, EidoDereferenceFactoryQueryLogEvent, EidoDereferenceFactoryQueryResponse, SubscriptionRequestedLogEvent, SubscriptionRequestedResponseLogEvent, SubscriptionTerminatedLogEvent, EidoDeniedLogEvent, EidoTransmissionErrorLogEvent, WebSocketEstablishedLogEvent, WebSocketTerminatedLogEvent]
+             VersionsLogEvent, SubscribeLogEvent, AnnoucementStartLogEvent, AnnouncementEndLogEvent, SessionStartLogEvent, SessionEndLogEvent, SessionStateChangeLogEvent, EidoLogEvent, EidoDereferenceFactoryQueryLogEvent, EidoDereferenceFactoryQueryResponse, SubscriptionRequestedLogEvent, SubscriptionRequestedResponseLogEvent, SubscriptionTerminatedLogEvent, EidoDeniedLogEvent, EidoTransmissionErrorLogEvent, WebSocketEstablishedLogEvent, WebSocketTerminatedLogEvent]
     LogEvent:
       type: object
       required:
@@ -1261,6 +1261,56 @@ components:
     Direction:
       type: string
       enum: [incoming, outgoing]
+    SessionStartLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - $ref: '#/components/schemas/CallLogEvent'
+    SessionEndLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - $ref: '#/components/schemas/CallLogEvent'
+    SessionStateChangeLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - state
+            - direction
+            - legCallId
+          properties:
+            state:
+              type: string
+              description: Values limited to those in the CallStates registry
+            direction:
+              $ref: '#/components/schemas/Direction'
+            legCallId:
+              type: string
+            targetId:
+              type: string
+            changeReason:
+              type: string
+    AnnouncementStartLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - announcementType
+          properties:
+            announcementType:
+              type: string
+            announcementTag:
+              type: string
+    AnnouncementEndLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - announcementType
+          properties:
+            announcementType:
+              type: string
+            announcementTag:
+              type: string
     EidoDereferenceFactoryQueryLogEvent:
       allOf:
         - $ref: '#/components/schemas/LogEvent'
@@ -1474,4 +1524,3 @@ components:
               type: string
             webSocketId:
               type: string
-
