--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -1527,7 +1527,7 @@ components:
             direction:
               $ref: '#/components/schemas/Direction'
             closeCode:
-              type: string
+              type: uint16
             closeText:
               type: string
             webSocketId:
