Revert "Update loggingservice.yaml"
This reverts commit e39aec85776686796ff6c8db2cbfb68c2cf906b3.

--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -1527,8 +1527,7 @@ components:
             direction:
               $ref: '#/components/schemas/Direction'
             closeCode:
-              type: integer
-              format: uint16
+              type: uint16
             closeText:
               type: string
             webSocketId:
