Revert "Update loggingservice.yaml"
This reverts commit 874db323ffc1ef2a49ee8981a8e6c61509453f92.

--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -1527,7 +1527,7 @@ components:
             direction:
               $ref: '#/components/schemas/Direction'
             closeCode:
-              type: uint16
+              type: string
             closeText:
               type: string
             webSocketId:
