--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Logging Service
-  version: "1.2.1"
+  version: "1.2"
 servers:
   - url: https://api.example.com/Logging/v1
 paths:
@@ -498,9 +498,7 @@ components:
              LostResponseLogEvent, CallSignalingMessageLogEvent, SipRecMetadataLogEvent, NonRtpMediaMessageLogEvent, AliLocationQueryLogEvent, AliLocationResponseLogEvent, MalformedMessageLogEvent, IncidentSplitLogEvent,
              DiscrepancyReportLogEvent, ElementStateChangeLogEvent, ServiceStateChangeLogEvent, AdditionalDataQueryLogEvent, AdditionalDataResponseLogEvent, LocationQueryLogEvent, LocationResponseLogEvent, CallStateChangeLogEvent,
              GatewayCallLogEvent, HookflashLogEvent, LegacyDigitsLogEvent, AgentStateChangeLogEvent, QueueStateChangeLogEvent, KeepAliveFailureLogEvent, RouteRuleMsgLogEvent, PolicyChangeLogEvent,
-             VersionsLogEvent, SubscribeLogEvent, AnnouncementStartLogEvent, AnnouncementEndLogEvent, SessionStartLogEvent, SessionEndLogEvent, SessionStateChangeLogEvent, EidoLogEvent, EidoDereferenceFactoryQueryLogEvent, 
-             EidoDereferenceFactoryQueryResponse, SubscriptionRequestedLogEvent, SubscriptionRequestedResponseLogEvent, SubscriptionTerminatedLogEvent, EidoDeniedLogEvent, EidoTransmissionErrorLogEvent, WebSocketEstablishedLogEvent, 
-             WebSocketTerminatedLogEvent]
+             VersionsLogEvent, SubscribeLogEvent, AnnouncementStartLogEvent, AnnouncementEndLogEvent, SessionStartLogEvent, SessionEndLogEvent, SessionStateChangeLogEvent, EidoLogEvent, EidoDereferenceFactoryQueryLogEvent, EidoDereferenceFactoryQueryResponse, SubscriptionRequestedLogEvent, SubscriptionRequestedResponseLogEvent, SubscriptionTerminatedLogEvent, EidoDeniedLogEvent, EidoTransmissionErrorLogEvent, WebSocketEstablishedLogEvent, WebSocketTerminatedLogEvent]
     LogEvent:
       type: object
       required:
@@ -1350,8 +1348,6 @@ components:
               format: uri
             responseError:
               type: string
-            responseText:
-              type: string
     SubscriptionRequested:
       allOf:
         - $ref: '#/components/schemas/LogEvent'
@@ -1392,9 +1388,7 @@ components:
             expires:
               type: integer
               format: int32
-            errorCode:
-              type: string
-            errorText:
+            responseError:
               type: string
     SubscriptionTerminated:
       allOf:
@@ -1427,7 +1421,7 @@ components:
             - queryId
             - subscriptionId
             - statusCode
-            - statusText
+            - statusDescription
           properties:
             peerId:
               type: string
@@ -1440,7 +1434,7 @@ components:
               type: string
             statusCode:
               type: string
-            statusText:
+            statusDescription:
               type: string
     EidoDeniedLogEvent:
       allOf:
@@ -1449,17 +1443,14 @@ components:
           required:
             - peerId
             - incidentId
-            - reasonCode
-            - reasonText
+            - reason
           properties:
             peerId:
               type: string
               format: uri
             incidentId:
               type: string
-            reasonCode:
-              type: string
-            reasonText:
+            reason:
               type: string
     EidoTransmissionErrorLogEvent:
       allOf:
@@ -1470,8 +1461,7 @@ components:
             - transactionId
             - direction
             - retries
-            - reasonCode
-            - reasonText
+            - status
           properties:
             peerId:
               type: string
@@ -1481,9 +1471,7 @@ components:
             retries:
               type: integer
               format: int32
-            reasonCode:
-              type: string
-            reasonText:
+            status:
               type: string
             transactionId:
               type: string
@@ -1518,7 +1506,7 @@ components:
             - peerId
             - direction
             - closeCode
-            - closeText
+            - closeReason
             - webSocketId
           properties:
             peerId:
@@ -1527,8 +1515,9 @@ components:
             direction:
               $ref: '#/components/schemas/Direction'
             closeCode:
-              type: string
-            closeText:
+              type: integer
+              format: uint16
+            closeReason:
               type: string
             webSocketId:
               type: string
