--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Logging Service
-  version: "1.2.1"
+  version: "1.3"
 servers:
   - url: https://api.example.com/Logging/v1
 paths:
@@ -825,6 +825,8 @@ components:
             direction:
               $ref: '#/components/schemas/Direction'
             protocol:
+              type: string
+            source:
               type: string
     AliLocationQueryLogEvent:
       allOf:
