--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Logging Service
-  version: "1.2.1"
+  version: "1.3.0"
 servers:
   - url: https://api.example.com/Logging/v1
 paths:
@@ -500,7 +500,7 @@ components:
              GatewayCallLogEvent, HookflashLogEvent, LegacyDigitsLogEvent, AgentStateChangeLogEvent, QueueStateChangeLogEvent, KeepAliveFailureLogEvent, RouteRuleMsgLogEvent, PolicyChangeLogEvent,
              VersionsLogEvent, SubscribeLogEvent, AnnouncementStartLogEvent, AnnouncementEndLogEvent, SessionStartLogEvent, SessionEndLogEvent, SessionStateChangeLogEvent, EidoLogEvent, EidoDereferenceFactoryQueryLogEvent, 
              EidoDereferenceFactoryQueryResponse, SubscriptionRequestedLogEvent, SubscriptionRequestedResponseLogEvent, SubscriptionTerminatedLogEvent, EidoDeniedLogEvent, EidoTransmissionErrorLogEvent, WebSocketEstablishedLogEvent, 
-             WebSocketTerminatedLogEvent]
+             WebSocketTerminatedLogEvent, RequestForServiceLogEvent, RequestAwarenessLogEvent, CancelRequestLogEvent, ResponseToRequestLogEvent, ResourceMesssageLogEvent, ResourceDiscoveryLogEvent]
     LogEvent:
       type: object
       required:
@@ -1511,7 +1511,6 @@ components:
               type: string
             webSocketId:
               type: string
-
     WebSocketTerminatedLogEvent:
       allOf:
         - $ref: '#/components/schemas/LogEvent'
@@ -1535,3 +1534,100 @@ components:
               type: string
             webSocketId:
               type: string
+    RequestForServiceLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - peerId
+            - direction
+            - requesttId
+          properties:
+            peerId:
+              type: string
+              format: uri
+            direction:
+              $ref: '#/components/schemas/Direction'
+            requestId:
+              type: string
+    RequestAwarenessLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - peerId
+            - direction
+            - requesttId
+          properties:
+            peerId:
+              type: string
+              format: uri
+            direction:
+              $ref: '#/components/schemas/Direction'
+            requestId:
+              type: string
+    CancelRequestLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - peerId
+            - direction
+            - requesttId
+          properties:
+            peerId:
+              type: string
+              format: uri
+            direction:
+              $ref: '#/components/schemas/Direction'
+    ResponseToRequestLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - peerId
+            - direction
+            - responseCode
+            - responseReason
+          properties:
+            peerId:
+              type: string
+              format: uri
+            direction:
+              $ref: '#/components/schemas/Direction'
+            responseCode:
+              type: string
+            responseText:
+              type: string
+    ResourceMesssageLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - peerId
+            - direction
+            - resourceMessage
+          properties:
+            peerId:
+              type: string
+              format: uri
+            direction:
+              $ref: '#/components/schemas/Direction'
+            resourceMessage:
+              type: object
+    ResourceDiscoveryLogEvent:
+      allOf:
+        - $ref: '#/components/schemas/LogEvent'
+        - type: object
+          required:
+            - peerId
+            - direction
+            - emergencyResourceComponent
+          properties:
+            peerId:
+              type: string
+              format: uri
+            direction:
+              $ref: '#/components/schemas/Direction'
+            emergencyResourceComponent:
+              type: object
