--- a/loggingservice.yaml
+++ b/loggingservice.yaml
@@ -51,13 +51,13 @@ paths:
             example: '2020-03-15T11:00:01-05:00'
       responses:
         '200':
-          description: LogEvents found
+          description: LogEvents Found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/LogEventContainerArray'
         '404':
-          description: Not found
+          description: Not Found
     post:
       tags:
         - LogEvent
@@ -72,7 +72,7 @@ paths:
         required: true
       responses:
         '201':
-          description: LogEvent successfully logged
+          description: LogEvent Successfully Logged
           content:
             application/json:
               schema:
@@ -87,11 +87,11 @@ paths:
         '460':
           description: Bad LogEvent
         '461':
-          description: LogEvent too big
+          description: LogEvent Too Big
         '462':
-          description: LogEvent extension not on approved list
+          description: LogEvent Extension Not On Approved List
         '463':
-          description: LogEvent extension on disallowed list
+          description: LogEvent Extension On Disallowed List
   /LogEvents/{logEventId}:
     get:
       tags:
@@ -107,13 +107,13 @@ paths:
             type: string
       responses:
         '200':
-          description: LogEvent found
+          description: LogEvent Found
           content:
             application/json:
               schema:
                 $ref: 'i3-common.yaml#/components/schemas/Jws'
         '404':
-          description: Not found
+          description: Not Found
   /Conversations:
     get:
       tags:
@@ -129,13 +129,13 @@ paths:
             type: string
       responses:
         '200':
-          description: Conversation found
+          description: Conversation Found
           content:
             application/json:
               schema:
                 type: string
         '404':
-          description: Not found
+          description: Not Found
         '454':
           description: Unspecified Error
         '464':
